# machine_learning_code_implementation

./: .gitignore  pyproject.toml
charpter10_AdaBoost/: adaboost.ipynb  adaboost_functional.ipynb  my_adaboost.ipynb
charpter11_GBDT/: gbdt_functional.ipynb
charpter12_XGBoost/: xgboost_functional.ipynb
charpter15_random_forest/: random_forest_functional.ipynb
charpter2_linear_regression/: my_implement.ipynb
charpter3_logistic_regression/: my_implement.ipynb
charpter4_regression_expansion/: my_lasso.ipynb  my_ridge.ipynb
charpter5_LDA/: my_LDA.ipynb
charpter6_knn/: my_knn.ipynb
charpter7_decision_tree/: my_cart.ipynb  my_id3.ipynb
charpter8_neural_networks/: my_nn.ipynb
charpter9_SVM/: hard_margin_svm.ipynb  my_gaussian_kernel_svm.ipynb  my_hard_margin_svm.ipynb  my_soft_margin_svm.ipynb
